# devforge

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT_LOG.md  IP_AGREEMENT.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  package.json  test.bat
.config/: private.yml
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/layouts/: MainLayout.tsx
codeforge/: README.md  package-lock.json  package.json  package.nls.json  package.nls.zh.json
codeforge/src/: extension.ts  i18n.ts
deployforge/: README.md  package-lock.json  package.json
deployforge/lib/: index.js
docs/: API_DESIGN_V2.md  ARCHITECTURE.md  ARCHITECTURE_V2.md  DATABASE_DESIGN_V2.md  DEVELOPMENT.md  FEEDBACK.md  MARKET_VALIDATION.md  PERSONALIZATION_DESIGN.md  PROMO_TWITTER.md  PROMO_V2EX.md  RELEASE_PACKAGE.md  TECHNOLOGY_ANALYSIS.md
docs/screenshots/: codeforge-screenshot.html  knowforge-screenshot.html
flowforge/: README.md  package-lock.json  package.json  server.js
flowforge/public/: index.html
knowforge/: .gitignore  README.md  index.html  package-lock.json  package.json  server.js
knowforge/docs/: PROGRESS.md
knowforge/public/: index.html
knowforge/src-tauri/: Cargo.toml  tauri.conf.json
knowforge/src-tauri/src/: main.rs
knowforge/src/config/: index.js
knowforge/src/i18n/: en.json  index.js  zh.json
knowforge/tests/: api.test.js  package.json
scripts/: init-db.sql
services/knowforge/: Dockerfile  pyproject.toml
services/knowforge/app/: __init__.py  api.py  config.py  main.py
(+5 files in other folders)
